--- a/style.css
+++ b/style.css
@@ -23,6 +23,40 @@ body {
     background-size: auto 100%;
     background-position: center;
     background-repeat: no-repeat;
-    height: 80vw;
+    height: 80vh;
     border-radius: 50px; 
+    color: white;
+    cursor: pointer;
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    transition: flex 0.7s ease-in;
+
+}
+
+.panel h3 {
+    font-size: 24px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    margin: 0;
+    opacity: 0;
+}
+
+.panel.active {
+    flex: 5;
+}
+
+.panel.active {
+    opacity: 1;
+}
+
+@media(max-width: 480px) {
+    .container {
+        width: 100dvw;
+    }
+
+    .panel:nth-of-type(4),.panel:nth-of-type(5) {
+        display: none;
+    }
 }
